templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: <DAEMONSET_NAME>
spec:
  selector:
    matchLabels:
      app: <APP_LABEL>
  template:
    metadata:
      labels:
        app: <APP_LABEL>
    spec:
      containers:
      - name: <CONTAINER_NAME>
        image: <DOCKER_IMAGE>
        ports:
        - containerPort: <CONTAINER_PORT>
