templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <SERVICE_NAME>
spec:
  selector:
    <LABEL_KEY>: <LABEL_VALUE>
  ports:
  - name: <PORT_NAME>
    port: <PORT>
    targetPort: <TARGET_PORT>
