templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <NETWORKPOLICY_NAME>
spec:
  podSelector:
    matchLabels:
      <SELECTOR_KEY>: <SELECTOR_VALUE>
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          <SOURCE_SELECTOR_KEY>: <SOURCE_SELECTOR_VALUE>
    ports:
    - protocol: TCP
      port: <PORT_NUMBER>
